<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Gokul Swaminathan
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name" translatable="false">Pdf Viewer Plus</string>
    <string name="pick_file">Pick File</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>
    <string name="toast_http_code_error">Remote server responded with an error.</string>
    <string name="toast_generic_download_error">We couldn\'t download this file for some reason.</string>
    <string name="toast_ssl_error">Secure connection failed.</string>
    <string name="saved_to_download">File saved to Download folder.</string>
    <string name="save_to_download_failed">Couldn\'t save file to Download folder.</string>
    <string name="action_about">About</string>
    <string name="version">Version</string>
    <string name="intro">Replay Intro</string>
    <string name="author" translatable="false">Gokul Swaminathan</string>
    <string name="email">Email</string>
    <string name="description_open">Of course this app is open source. You always have the privilege to make your own modifications to this app. The source code link is in the about section.</string>
    <string name="title_open">Freedom</string>
    <string name="title_intro" translatable="false">Pdf Viewer Plus</string>
    <string name="description__intro">A simple Pdf document viewer.</string>
    <string name="myLicense">License</string>
    <string name="privacy">Privacy Policy</string>

    <string name="license" translatable="false">
        MIT License\n\nCopyright (&#169;) 2018 Gokul Swaminathan\n\nPermission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>

    <string name="appChangelog">Change Log</string>
    <string name="ok">Ok</string>
    <string name="title_permission">Storage Permissions</string>
    <string name="description__permission">You will now be prompted to allow the app to access the phone\'s storage. Without this permission, documents might fail to open in some cases.</string>

    <string name="libs">Open Source Libraries</string>
    <string name="git" translatable="false">Github</string>
    <string name="code">Source Code</string>

    <string name="share">Share File</string>
    <string name="print">Print File</string>
    <string name="full_screen">Full Screen</string>
    <string name="devnotice">Developer Notice</string>
    <string name="theme_picker">Change Theme</string>
    <string name="app_info">App Info</string>
    <string name="author_info">Author Info</string>
    <string name="contribution">Contributors</string>

    <string name="label_theme_picker">Theme Picker</string>

    <string name="pref_theme_title">Themes</string>
    <string name="pref_theme_summary">Select a pre-installed theme</string>

    <string name="pref_primary_color_title">Primary color</string>
    <string name="pref_primary_color_summary">Displayed most frequently across your app.</string>

    <string name="pref_accent_color_title">Accent color</string>
    <string name="pref_accent_color_summary">Accents select parts of the UI.</string>

    <string name="pref_background_color_title">Background color</string>
    <string name="pref_background_color_summary">The underlying color of the app’s content.</string>
    <string name="pref_category_appearance">Appearance</string>

    <string name="pref_colored_navigation_bar_title">Navigation bar color</string>
    <string name="pref_colored_navigation_bar_summary">Apply the primary color to the navigation bar</string>
    <string name="meta">File Info</string>
    <string name="quality">High Quality Rendering</string>
    <string name="settings">Settings</string>
    <string name="alias">Anti-Aliasing</string>
    <string name="scroll">Horizontal Scrolling</string>
    <string name="snap">Page Snap</string>
    <string name="snap_summary">Center the view on the current page after each swipe</string>
    <string name="fling">Page Fling</string>
    <string name="fling_summary">Perform a quick swipe to jump directly to the next page</string>
    <string name="qualitysettings">Visual</string>
    <string name="scrollsettings">Scrolling</string>
    <string name="title_activity_settings">Settings</string>
    <string name="buttonLog">Continue</string>
    <string name="show_in_launcher">Show app in launcher</string>
    <string name="show_in_launcher_summary">You may need to restart your launcher for this option to take effect</string>
    <string name="pdf_title">Title: %1$s</string>
    <string name="pdf_author">Author: %1$s</string>
    <string name="pdf_creation_date">Creation Date: %1$s</string>

    <string name="file_opening_error">An error occurred while opening the file.</string>
    <string name="protected_pdf">Protected PDF</string>
    <string name="enter_password">Enter the correct password to open the document:</string>
    <string name="wrong_password">Wrong password.</string>


    <string name="dark_pdf">Dark theme for PDF</string>
    <string name="keep_screen_on">Keep the screen on</string>
    <string name="maximum_zoom">Maximum zoom:</string>
    <string name="privacy_info">This app does not collect any data.\nThe following permissions are required to provide specific features in the app:\n- <b>Internet</b>: open PDFs through links\n- <b>Storage</b>: open files from storage, save PDFs opened through links</string>
</resources>