<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pickFile"
        android:icon="@drawable/folder_icon"
        android:title="@string/pick_file"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/metaFile"
        android:icon="@drawable/meta_info"
        android:title="@string/meta"
        android:orderInCategory="4"
        app:showAsAction="always" />

    <item
        android:id="@+id/shareFile"
        android:icon="@drawable/share_icon"
        android:title="@string/share"
        android:orderInCategory="2"
        app:showAsAction="always"  />

    <item
        android:id="@+id/printFile"
        android:icon="@drawable/print_icon"
        android:title="@string/print"
        android:orderInCategory="6"
        app:showAsAction="always"  />

    <item
        android:id="@+id/fullscreen"
        android:icon="@drawable/fullscreen_icon"
        android:title="@string/full_screen"
        android:orderInCategory="7"
        app:showAsAction="always" />

</menu>
